--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,12 @@ nav a {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.nav-list:hover {
+  color: #404bbf;
+}
+.nav-list:focus {
+  color: #404bbf;
+}
 address a {
   font-weight: 400;
   font-size: 16px;
@@ -31,13 +37,28 @@ address a {
   color: #434455;
   font-style: normal;
 }
+address a:focus {
+  color: #404bbf;
+}
+address a:hover {
+  color: #404bbf;
+}
 .hero {
   color: #fff;
+  text-align: center;
 }
 .hero button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+}
+.hero button:hover {
+  font-weight: 600;
+  background-color: #404bbf;
 }
 .section-title {
   font-weight: 700;
