--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ address a:hover {
 }
 .footer {
   color: #f4f4fd;
+  background-color: #2e2f42;
 }
 .footer-logo {
   font-family: 'Raleway', sans-serif;
