--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,15 @@ nav a {
 .nav-list:focus {
   color: #404bbf;
 }
-.contacts a {
+.contacts {
+  font-style: normal;
+}
+.contacts-list {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  font-style: normal;
 }
 .contacts-list:focus {
   color: #404bbf;
