--- a/css/styles.css
+++ b/css/styles.css
@@ -3,56 +3,20 @@ body {
   color: #434455;
   background-color: #ffffff;
 }
-ul {
+.top {
+  border-bottom: 1px solid #e7e9fc;
+}
+.top-nav {
+  align-items: center;
+  display: flex;
+}
+.top-nav-list {
   list-style: none;
-}
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.container {
-  max-width: 1158px;
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: 0;
-  margin-right: 0;
-}
-a {
-  text-decoration: none;
-}
-img {
-  display: block;
-}
-h1,
-h2,
-h3,
-p {
-  margin: 0 0 0 0;
-}
-.logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-}
-.accent {
-  color: #2e2f42;
-}
-nav {
+  gap: 40px;
   display: flex;
 }
-nav ul {
-  display: flex;
-}
-nav a {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+.nav-list {
+  padding: 24px 0;
 }
 .nav-list:hover {
   color: #404bbf;
@@ -60,8 +24,19 @@ nav a {
 .nav-list:focus {
   color: #404bbf;
 }
+.top-nav a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
 .contacts {
   font-style: normal;
+}
+.top-contacts-list {
+  display: flex;
+  gap: 40px;
 }
 .contacts-list {
   font-weight: 400;
@@ -76,15 +51,58 @@ nav a {
 .contacts-list:hover {
   color: #404bbf;
 }
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+}
+header .container {
+  display: flex;
+}
+a {
+  text-decoration: none;
+}
+img {
+  display: block;
+}
+h1,
+h2,
+h3,
+p {
+  margin: 0 0 0 0;
+}
+ul {
+  list-style: none;
+}
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
+}
+
+.accent {
+  color: #2e2f42;
+}
+
 .hero {
   color: #fff;
   text-align: center;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .main-title {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  max-width: 496px;
 }
 .hero-button {
   font-family: 'Roboto', sans-serif;
@@ -95,6 +113,11 @@ nav a {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
 }
 .hero-button:hover {
   font-weight: 600;
@@ -111,6 +134,26 @@ nav a {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
+}
+.advantages-list {
+  display: flex;
+  gap: 24px;
+}
+.advantages-list-item {
+  width: calc((100% - 72px) / 4);
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+.team-list-item {
+  width: calc((100% - 72px) / 4);
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+}
+.team-info {
+  padding: 32px 0;
 }
 .section-subtitle {
   font-weight: 500;
@@ -118,6 +161,7 @@ nav a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .section-text {
   font-weight: 400;
@@ -126,19 +170,34 @@ nav a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.team .section-text {
+  text-align: center;
+}
 .team {
   background-color: #f4f4fd;
   text-align: center;
 }
-.section-list {
-  background-color: #ffffff;
-}
 .portfolio .section-title {
   text-align: center;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-list-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .footer {
   color: #f4f4fd;
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 .footer-logo {
   font-family: 'Raleway', sans-serif;
@@ -149,6 +208,8 @@ nav a {
   text-transform: uppercase;
   color: #4d5ae5;
   background-color: #2e2f42;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-text {
   font-size: 16px;
@@ -157,4 +218,7 @@ nav a {
 }
 .footer-accent {
   color: #f4f4fd;
+}
+.advantages .section-title {
+  visibility: hidden;
 }
