--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ body {
 .container {
   max-width: 1158px;
   padding: 0 15px;
+  margin: 0;
 }
 header .container {
   display: flex;
@@ -141,7 +142,7 @@ ul {
   gap: 24px;
 }
 .advantages-list-item {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .team-list {
   display: flex;
