--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,11 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: block;
 }
 .contacts {
   font-style: normal;
+  margin-left: auto;
 }
 .top-contacts-list {
   display: flex;
@@ -62,6 +64,7 @@ body {
 }
 header .container {
   display: flex;
+  align-items: center;
 }
 a {
   text-decoration: none;
@@ -80,16 +83,6 @@ ul {
   padding-left: 0;
   margin: 0;
 }
-.logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-right: 76px;
-}
 
 .accent {
   color: #2e2f42;
@@ -106,6 +99,9 @@ ul {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
 }
 .hero-button {
   font-family: 'Roboto', sans-serif;
@@ -121,6 +117,7 @@ ul {
   height: 56px;
   border: none;
   border-radius: 4px;
+  margin: 0 auto;
 }
 .hero-button:hover {
   font-weight: 600;
@@ -210,6 +207,7 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px;
 }
 .footer-accent {
   color: #f4f4fd;
@@ -237,4 +235,14 @@ ul {
   width: calc((100% - 72px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+}
+.top-nav .logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
 }
