--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,15 @@ ul {
   color: #fff;
   text-align: center;
   background-color: #2e2f42;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   padding: 188px 0;
 }
 .main-title {
@@ -140,6 +149,11 @@ ul {
   display: flex;
   gap: 24px;
 }
+.advantages-list-icon {
+  padding: 24px 100px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
 
 .team-list {
   display: flex;
@@ -148,6 +162,22 @@ ul {
 
 .team-info {
   padding: 32px 0;
+}
+.team-contacts {
+  display: flex;
+  gap: 24px;
+}
+.team-list-item .team-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.team-link-icon {
+  fill: #f4f4fd;
 }
 .section-subtitle {
   font-weight: 500;
