--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
 }
 .top {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .top-nav {
   align-items: center;
@@ -17,12 +19,28 @@ body {
 }
 .nav-list {
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list:hover {
   color: #404bbf;
 }
 .nav-list:focus {
   color: #404bbf;
+}
+.top-nav-list .nav-special {
+  position: relative;
+  color: #404bbf;
+}
+
+.top-nav-list .nav-special::after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 .top-nav a {
   font-weight: 500;
@@ -35,6 +53,7 @@ body {
 .contacts {
   font-style: normal;
   margin-left: auto;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .top-contacts-list {
   display: flex;
@@ -61,6 +80,12 @@ body {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  margin-right: 8px;
 }
 header .container {
   display: flex;
@@ -102,6 +127,7 @@ ul {
     ),
     url(../images/people-office.jpg);
   padding: 188px 0;
+  max-width: 1440px;
 }
 .main-title {
   font-size: 56px;
@@ -127,6 +153,7 @@ ul {
   border: none;
   border-radius: 4px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover {
   font-weight: 600;
