--- a/css/styles.css
+++ b/css/styles.css
@@ -617,7 +617,7 @@ footer .social-link:focus {
   border-color: #4d5ae5;
 }
 
-.modal-cont-checkbox {
+.modal-cont-chekbox {
   margin-bottom: 24px;
 }
 
