--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,18 @@ body {
   align-items: center;
   display: flex;
 }
+
+.top-nav .logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
+}
+
 .top-nav-list {
   list-style: none;
   gap: 40px;
@@ -97,10 +109,7 @@ header .container {
   display: flex;
   align-items: center;
 }
-footer .container {
-  display: flex;
-  align-items: baseline;
-}
+
 a {
   text-decoration: none;
 }
@@ -136,8 +145,9 @@ ul {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
-  padding: 188px 0;
+  padding: 72px 0;
   max-width: 320px;
+  height: 432px;
   /* color: #fff;
   text-align: center;
   background-color: #2e2f42;
@@ -154,13 +164,22 @@ ul {
   max-width: 1440px; */
 }
 .main-title {
-  font-size: 56px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  max-width: 216px;
+  margin-left: auto;
+  margin-right: auto;
+  /* font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 48px;
+  margin-bottom: 48px; */
 }
 .hero-button {
   font-family: 'Roboto', sans-serif;
@@ -451,19 +470,26 @@ ul {
 .footer {
   color: #f4f4fd;
   background-color: #2e2f42;
-  padding: 100px 0;
+  padding: 96px 16px;
 }
+
+footer .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* align-items: baseline; */
+}
+
 .footer-logo {
-  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  background-color: #2e2f42;
   display: inline-block;
-  margin-bottom: 16px;
+  margin: 0 auto 16px auto;
 }
 .footer-text {
   font-size: 16px;
@@ -488,18 +514,8 @@ ul {
   overflow: hidden;
 }
 
-.top-nav .logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-right: 76px;
-}
 .footer-left {
-  margin-right: 120px;
+  width: 288px;
 }
 .footer-social-text {
   font-weight: 500;
@@ -528,11 +544,11 @@ footer .social-link:focus {
 .subscribe-box {
   display: flex;
   flex-direction: column;
-  margin-left: auto;
+  gap: 16px;
+  /* margin-left: auto; */
 }
 
 .subscribe-text {
-  margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -542,14 +558,15 @@ footer .social-link:focus {
 
 .subscribe-form {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .subscribe-label {
 }
 
 .subscribe-input {
-  width: 264px;
+  width: 288px;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
