--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@ a {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 h1,
 h2,
@@ -127,6 +129,133 @@ ul {
 .accent {
   color: #2e2f42;
 }
+
+/* mobile menu */
+
+.mobile-menu {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 1;
+  padding: 24px 24px 40px 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
+}
+.mobile-menu.is-open {
+  visibility: visible;
+  pointer-events: auto;
+  opacity: 1;
+}
+.mobile-close-btn {
+  display: block;
+  margin-left: auto;
+  box-sizing: border-box;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 24px;
+  height: 24px;
+  width: 24px;
+  align-items: center;
+  justify-content: center;
+  line-height: 0;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-close-svg {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-close-btn:hover,
+.mobile-close-btn:focus {
+  border: none;
+  background-color: #404bbf;
+}
+.mobile-close-btn:hover .mob-close-svg,
+.mobile-close-btn:focus .mob-close-svg {
+  fill: #ffffff;
+}
+.mob-nav {
+}
+.mob-nav-list {
+}
+.mob-nav-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-nav-link:hover,
+.mob-nav-link:focus {
+  color: #404bbf;
+}
+
+.mob-nav-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mob-contacts {
+  margin-bottom: 48px;
+}
+.mob-contacts-list {
+}
+.mob-contacts-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mob-contacts-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-contacts-link:hover,
+.mob-contacts-link:focus {
+  color: #4d5ae5;
+}
+.mob-social {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.mob-social-list {
+}
+.mob-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-social-link:hover,
+.mob-social-link:focus {
+  background-color: #404bbf;
+}
+
+.mob-link:hover,
+.mob-link:focus {
+  background-color: #404bbf;
+}
+
+.mob-social-link-icon {
+  fill: #f4f4fd;
+}
+
+/*hero section*/
 
 .hero {
   margin-top: 0;
@@ -561,8 +690,6 @@ footer .social-link:focus {
   border-radius: 4px;
   width: 288px;
   min-height: 683px;
-  /* width: 408px;
-  min-height: 584px; */
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
@@ -838,8 +965,10 @@ footer .social-link:focus {
     letter-spacing: 0.04em;
     color: #434455;
   }
-  .header-mobile-icon {
+  .header-mobile-btn {
     display: none;
+    background-color: transparent;
+    border: none;
   }
   .hero .container {
     flex-direction: column;
