--- a/css/styles.css
+++ b/css/styles.css
@@ -95,10 +95,11 @@ body {
 .section {
   margin-top: 96px;
   margin-bottom: 96px;
+  width: 100%;
 }
 
 .container {
-  max-width: 320px;
+  max-width: 288px;
   margin: 0 auto;
   display: flex;
   align-items: flex-start;
@@ -264,6 +265,10 @@ ul {
 
 .hero {
   margin-top: 0;
+}
+
+.hero .container {
+  width: 320px;
   color: #fff;
   text-align: center;
   background-color: #2e2f42;
@@ -275,7 +280,7 @@ ul {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/mobile-dark-bg.jpg);
   padding: 72px 0;
   height: 432px;
 }
@@ -976,6 +981,13 @@ footer .social-link:focus {
 
   .hero .container {
     flex-direction: column;
+    width: 768px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/tablet-dark-bg.jpg);
   }
   .main-title {
     max-width: 496px;
@@ -1067,6 +1079,15 @@ footer .social-link:focus {
   }
   .hero {
     margin-top: 0;
+  }
+  .hero .container {
+    width: 1440px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/pc-dark-bg.jpg);
   }
   .contacts-list {
     font-weight: 400;
